fixed content overflow horizontally

--- a/src/components/Technotes.css
+++ b/src/components/Technotes.css
@@ -27,7 +27,7 @@ code, pre {
     display: flex;
     /* min-width: 100vw; */
     flex-direction: column;
-    align-items: flex-start;
+    align-items: stretch;
     padding: 2em;
 }
 
